syntax = "proto3";
package ElectronicSignaturesIndustries.xdvnode.xdvnode;

// this line is used by starport scaffolding # proto/tx/import
import "xdvnode/documents.proto";

option go_package = "github.com/Electronic-Signatures-Industries/xdv-node/x/xdvnode/types";

// Msg defines the Msg service.
service Msg {
    // this line is used by starport scaffolding # proto/tx/rpc
  rpc CreateDocuments(MsgCreateDocuments) returns (MsgCreateDocumentsResponse);
  rpc UpdateDocuments(MsgUpdateDocuments) returns (MsgUpdateDocumentsResponse);
  rpc DeleteDocuments(MsgDeleteDocuments) returns (MsgDeleteDocumentsResponse);
}

// this line is used by starport scaffolding # proto/tx/message
message MsgCreateDocuments {
  string creator = 1;
  string name = 2;
}

message MsgCreateDocumentsResponse {
  uint64 id = 1;
}

message MsgUpdateDocuments {
  string creator = 1;
  uint64 id = 2;
  string name = 3;
}

message MsgUpdateDocumentsResponse { }

message MsgDeleteDocuments {
  string creator = 1;
  uint64 id = 2;
}

message MsgDeleteDocumentsResponse { }
